--- a/report/public/movie_create.html
+++ b/report/public/movie_create.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>新規登録</title>
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
     <h2>新しい映画レビューを登録</h2>
